# tsugite

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.runtime  ENHANCED_CHAT_FEATURES.md  LICENSE  README.md  TESTING_NOTES.md  cliff.toml  mise.toml  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml
agents/basic/: hello_world.md  hello_world.test.md  research_agent.md  research_agent.test.md
benchmarks/: README.md  config.yaml  demo_usage.py
benchmarks/basic/: conditional_logic.md  echo.md  echo.test.md  hello_world.md  hello_world.test.md  json_formatter.md  json_formatter.test.md  list_maker.md  list_maker.test.md  (+6 more)
docs/: ACP_INTEGRATION.md  agents.md  external-agent-integration.md  plugin-adapters.md  plugin-events.md  plugin-hooks.md  plugin-tools.md  plugins.md  sandbox.md  secrets.md
examples/: attachment_assign_demo.md  attachment_index_demo.md  exec_dispatcher.md
examples/tsugite-example-plugin/: pyproject.toml
examples/tsugite-example-plugin/tsugite_example_plugin/: __init__.py  adapter.py
plugins/tsugite-acp/: README.md  pyproject.toml
plugins/tsugite-acp/tests/: conftest.py  test_alias_parsing.py  test_client.py  test_config.py  test_permissions.py  test_provider.py
plugins/tsugite-acp/tests/integration/: test_real_agent.py
plugins/tsugite-acp/tsugite_acp/: __init__.py  client.py  config.py  models.py  policy.py  provider.py
plugins/tsugite-cc-driver/: README.md  pyproject.toml
plugins/tsugite-cc-driver/tsugite_cc_driver/: __init__.py  adapter.py  executor.py  hooks.py  settings.py
plugins/tsugite-claude-code/: README.md  pyproject.toml
plugins/tsugite-claude-code/tests/: test_claude_code_attachments.py  test_claude_code_provider.py  test_poisoned_resume.py
plugins/tsugite-claude-code/tsugite_claude_code/: __init__.py  process.py  provider.py
plugins/tsugite-codex-cli/: README.md  pyproject.toml
plugins/tsugite-codex-cli/tests/: conftest.py  test_auth.py  test_codex_provider.py  test_provider.py
plugins/tsugite-codex-cli/tsugite_codex_cli/: __init__.py  auth.py  provider.py
plugins/tsugite-daemon/: pyproject.toml
plugins/tsugite-daemon/tsugite_daemon/: __init__.py  auth.py  commands.py  compaction_scheduler.py  config.py  gateway.py  job_store.py  jobs_orchestrator.py  memory.py  push.py  scheduler.py  session_runner.py  session_store.py  webhook_store.py
plugins/tsugite-daemon/tsugite_daemon/adapters/: __init__.py  base.py  http.py  scheduler_adapter.py
plugins/tsugite-daemon/tsugite_daemon/adapters/http/: __init__.py  agents.py  files.py  helpers.py  jobs.py  push.py  schedules.py  secrets.py  server.py  sessions.py  sse.py  static.py  terminals.py  usage.py  webhooks.py
plugins/tsugite-daemon/tsugite_daemon/web/: index.html  sw.js
plugins/tsugite-daemon/tsugite_daemon/web/css/: console.css  jobs-tab.css  jobs.css  responsive.css  terminal.css  theme.css
plugins/tsugite-daemon/tsugite_daemon/web/js/: api.js  app.js  utils.js
plugins/tsugite-daemon/tsugite_daemon/web/js/utils/: xterm-loader.js
plugins/tsugite-daemon/tsugite_daemon/web/js/views/: conversations.js  file-editor.js  jobs.js  schedules.js  terminals.js  usage.js  webhooks.js
plugins/tsugite-daemon/tsugite_daemon/web/js/views/conversation/: attachments.js  event_types.js  history.js  sessions.js  streaming.js
plugins/tsugite-discord/: pyproject.toml
plugins/tsugite-discord/tests/: test_discord_progress.py
plugins/tsugite-discord/tsugite_discord/: __init__.py
plugins/tsugite-pty/: pyproject.toml
plugins/tsugite-pty/tests/: test_pty_manager.py  test_pty_tools.py  test_terminal_sandbox.py  test_terminal_store.py
plugins/tsugite-pty/tsugite_pty/: __init__.py  pty_manager.py  terminal_runtime.py  terminal_store.py  tools.py
plugins/tsugite-sandbox/: pyproject.toml
plugins/tsugite-sandbox/tests/: test_sandbox.py
plugins/tsugite-sandbox/tsugite_sandbox/: __init__.py
plugins/tsugite-tmux/: pyproject.toml
plugins/tsugite-tmux/tests/: test_tmux_tools.py
plugins/tsugite-tmux/tsugite_tmux/: __init__.py
plugins/tsugite-web/: pyproject.toml
plugins/tsugite-web/tests/: test_web_search.py
plugins/tsugite-web/tsugite_web/: __init__.py
plugins/tsugite-youtube/: pyproject.toml
plugins/tsugite-youtube/tests/: test_youtube.py
plugins/tsugite-youtube/tsugite_youtube/: __init__.py
scripts/: backfill_usage.py  bump_version.py  regenerate_schema.py  update_model_registry.py
tests/: README.md  __init__.py  conftest.py  smoke_test.sh  test_agent_attachments.py  test_agent_composition.py  test_agent_file_hot_loading.py  test_agent_inheritance.py  test_agent_parser.py  test_agent_preparation.py  test_agent_sessions.py  test_agent_skills.py  test_agent_utils.py  test_agents_tool.py  test_animation.py  test_anthropic_extended_thinking.py  test_anthropic_usage.py  test_attachment_deduplication.py  test_attachment_resolution.py  test_attachments.py  test_attachments_registry.py  test_auto_context_handler.py  test_auto_discovery.py  test_auto_load_agents.py  test_background_task_status.py  test_background_tasks.py  test_benchmark_core.py  test_benchmark_evaluators.py  test_benchmark_metrics.py  test_benchmark_reports.py  test_builtin_agent_paths.py  test_builtin_agents.py  test_cache_control.py  test_chat_cli.py  test_chat_error_handling.py  test_claude_code_attachments.py  test_claude_code_provider.py  test_cli.py  test_cli_animation_integration.py  test_cli_arguments.py  (+141 more)
tsugite/: __init__.py  acp_model.py  agent_composition.py  agent_inheritance.py  agent_preparation.py  agent_runner.py  agent_utils.py  animation.py  builtin_agents.py  cache.py  cancellation.py  chat.py  chat_ui.py  config.py  console.py  constants.py  custom_ui.py  docker_cli.py  exceptions.py  hooks.py  interaction.py  mcp_client.py  mcp_config.py  mcp_integration.py  mcp_server.py  md_agents.py  models.py  options.py  plugins.py  renderer.py  shell_tool_config.py  skill_discovery.py  tool_adapter.py  tsugite.py  ui_context.py  user_agent.py  utils.py  xdg.py
(+458 files in other folders)
