[project]
name = "tsugite-cli"
version = "0.17.1"
description = "Micro-agent runner for task automation using markdown definitions"
authors = [{ name = "Justyn Shull" }]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["agents", "automation", "cli", "jinja2"]
dependencies = [
  "typer>=0.12",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "httpx>=0.25",
  "rich>=13.0",
  "questionary>=2.1.1",
  "html2text>=2020.1.16",
  "tiktoken>=0.7.0",
  "pydantic>=2.12.3",
  "pathspec>=0.11.0",
  "prompt-toolkit>=3.0.43",
  "portalocker>=2.8.0",
  "tzlocal>=5.3.1",
  "cryptography>=46.0.5",
  "nest_asyncio>=1.5.0",
]

[project.optional-dependencies]
web = [
  "tsugite-web",
  "tsugite-youtube",
]
sandbox = [
  "tsugite-sandbox",
]
daemon = [
  "tsugite-daemon",
  "tsugite-discord",
]
discord = [
  "tsugite-discord",
]
claude-code = [
  "tsugite-claude-code",
]
all = [
  "tsugite-web",
  "tsugite-youtube",
  "tsugite-sandbox",
  "tsugite-pty",
  "tsugite-daemon",
  "tsugite-discord",
  "tsugite-tmux",
  "tsugite-acp",
  "tsugite-claude-code",
  "tsugite-codex-cli",
]

[project.scripts]
tsugite = "tsugite.tsugite:app"
tsu = "tsugite.tsugite:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite",
  "/README.md",
  "/LICENSE",
  "/CONTRIBUTING.md",
  "/AGENTS.md",
  "/pyproject.toml",
]

[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
tsugite-cli = { workspace = true }
tsugite-tmux = { workspace = true }
tsugite-acp = { workspace = true }
tsugite-claude-code = { workspace = true }
tsugite-codex-cli = { workspace = true }
tsugite-web = { workspace = true }
tsugite-youtube = { workspace = true }
tsugite-sandbox = { workspace = true }
tsugite-pty = { workspace = true }
tsugite-daemon = { workspace = true }
tsugite-discord = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
  "E501", # Line too long (handled by black)
  "F821", # Undefined name in string type annotations (forward refs)
]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]
addopts = "-n auto --dist loadfile --cov=tsugite --cov-report=term-missing --cov-report=html --cov-report=xml"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::RuntimeWarning"]
norecursedirs = [
  '.*',
  'build',
  'dist',
  'CVS',
  '_darcs',
  '{arch}',
  '*.egg',
  '_*',
  'integration',
  'e2e',
]

[tool.coverage.run]
source = ["tsugite", "tsugite_web", "tsugite_youtube", "tsugite_sandbox", "tsugite_pty", "tsugite_daemon", "tsugite_discord"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.pylint]
disable = [
  "line-too-long",
  "missing-function-docstring",
  "missing-module-docstring",
  "invalid-name",
]
ignore = [".venv", "docs", "tests"]

[dependency-groups]
dev = [
  "black>=25.9.0",
  "pylint>=4.0.2",
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=6.0.0",
  "pytest-playwright>=0.7.2",
  "pytest-xdist>=3.5.0",
  "ruff>=0.1",
  "vulture>=2.14",
  "tsugite-tmux",
  "tsugite-acp",
  "tsugite-claude-code",
  "tsugite-codex-cli",
  "tsugite-web",
  "tsugite-youtube",
  "tsugite-sandbox",
  "tsugite-pty",
  "tsugite-daemon",
  "tsugite-discord",
]
