[project]
name = "tsugite-acp"
version = "0.17.1"
description = "Tsugite plugin: ACP provider routing through claude-agent-acp"
requires-python = ">=3.11"
dependencies = [
  "tsugite-cli==0.17.1",
  "agent-client-protocol>=0.9.0",
]

[project.entry-points."tsugite.providers"]
acp = "tsugite_acp:create_provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_acp"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_acp",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
