[project]
name = "tsugite-claude-code"
version = "0.18.0"
description = "Tsugite plugin: Claude Code provider (routes LLM calls through the claude CLI)"
authors = [{ name = "Justyn Shull" }]
requires-python = ">=3.11"
dependencies = [
  "tsugite-cli==0.18.0",
]

[project.entry-points."tsugite.providers"]
claude_code = "tsugite_claude_code:create_provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_claude_code"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_claude_code",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
