[project]
name = "tsugite-codex-cli"
version = "0.17.1"
description = "Tsugite plugin: ChatGPT subscription auth via Codex CLI token store"
requires-python = ">=3.11"
dependencies = [
  "tsugite-cli==0.17.1",
]

[project.entry-points."tsugite.providers"]
codex_cli = "tsugite_codex_cli:create_provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_codex_cli"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_codex_cli",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
