[project]
name = "tsugite-codex-cli"
version = "0.17.3"
description = "Tsugite plugin: ChatGPT subscription auth via Codex CLI token store"
authors = [{ name = "Justyn Shull" }]
requires-python = ">=3.11"
dependencies = [
  "tsugite-cli==0.17.3",
]

[project.entry-points."tsugite.providers"]
codex_cli = "tsugite_codex_cli:create_provider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_codex_cli"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_codex_cli",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
