[project]
name = "tsugite-daemon"
version = "0.17.1"
description = "Tsugite plugin: daemon stack (HTTP/web UI, scheduler, jobs, sessions, notifications)"
requires-python = ">=3.11"
dependencies = [
  "tsugite-cli==0.17.1",
  "tsugite-pty==0.17.1",
  "tsugite-sandbox==0.17.1",
  "cronsim>=2.6",
  "starlette>=0.36",
  "uvicorn>=0.25",
  "python-multipart>=0.0.9",
  "pywebpush>=2.0.0",
  "py-vapid>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_daemon"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_daemon",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
tsugite-pty = { workspace = true }
tsugite-sandbox = { workspace = true }
