[project]
name = "tsugite-discord"
version = "0.17.2"
description = "Tsugite plugin: Discord bot adapter for the daemon"
requires-python = ">=3.11"
dependencies = [
  "tsugite-daemon==0.17.2",
  "discord.py>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_discord"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_discord",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-daemon = { workspace = true }
