[project]
name = "tsugite-sandbox"
version = "0.17.1"
description = "Tsugite plugin: bubblewrap sandbox backend (default-installed)"
requires-python = ">=3.11"
dependencies = ["tsugite-cli==0.17.1"]

[project.entry-points."tsugite.sandbox"]
bwrap = "tsugite_sandbox:BubblewrapSandbox"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_sandbox"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_sandbox",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
