[project]
name = "tsugite-tmux"
version = "0.17.3"
description = "Tsugite plugin: tmux session management tools with automatic output logging"
authors = [{ name = "Justyn Shull" }]
requires-python = ">=3.11"
dependencies = ["tsugite-cli==0.17.3"]

[project.entry-points."tsugite.plugins"]
tmux = "tsugite_tmux"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_tmux"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_tmux",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
