[project]
name = "tsugite-web"
version = "0.17.0"
description = "Tsugite plugin: web search (DuckDuckGo) plus readability article extraction"
requires-python = ">=3.11"
dependencies = [
  "tsugite-cli==0.17.0",
  "ddgs>=9.6.0",
  "readability-lxml>=0.8",
]

[project.entry-points."tsugite.plugins"]
web = "tsugite_web"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tsugite_web"]

[tool.hatch.build.targets.sdist]
include = [
  "/tsugite_web",
  "/pyproject.toml",
]

[tool.uv.sources]
tsugite-cli = { workspace = true }
